--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "history": "^1.13.1",
     "isomorphic-fetch": "^2.1.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.0",
+    "react-router": "^1.0.0",
     "redux": "^3.0.0",
     "redux-logger": "^2.0.2",
+    "redux-simple-router": "0.0.8",
     "redux-thunk": "^0.1.0"
   },
   "devDependencies": {
