--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^0.7.0",
+    "body-parser": "^1.14.1",
     "history": "^1.13.1",
-    "isomorphic-fetch": "^2.1.1",
+    "install": "^0.3.0",
+    "npm": "^3.4.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.0",
@@ -15,7 +18,8 @@
     "redux": "^3.0.0",
     "redux-logger": "^2.0.2",
     "redux-simple-router": "0.0.8",
-    "redux-thunk": "^0.1.0"
+    "redux-thunk": "^0.1.0",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
