--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
+    "redis": "^2.4.2",
     "redux": "^3.0.0",
     "redux-logger": "^2.0.2",
     "redux-simple-router": "0.0.8",
