--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,17 @@
 {
-  "stage": 2,
+  "presets": ["es2015", "react"],
   "env": {
     "development": {
       "plugins": [
-        "react-transform"
-      ],
-      "extra": {
-        "react-transform": {
+        ["react-transform", {
           "transforms": [{
             "transform": "react-transform-hmr",
             "imports": ["react"],
-            "locals":  ["module"]
+            "locals": ["module"]
           }]
-        }
-      }
+        }],
+        ["transform-runtime"]
+      ]
     }
   }
 }
