Disable eslint 'no-console' rule for now

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
       "anonymous": "always",
       "named": "never"
     }],
-    "func-names": 0
+    "func-names": 0,
+    "no-console": 0
   },
 }
