--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.14.1",
     "history": "^1.13.1",
     "install": "^0.3.0",
+    "moment": "^2.11.1",
     "npm": "^3.4.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
@@ -22,6 +23,7 @@
     "redux-simple-router": "0.0.8",
     "redux-thunk": "^0.1.0",
     "resemblejs": "^2.1.0",
+    "rxjs": "^5.0.0-beta.0",
     "uuid": "^2.0.1"
   },
   "devDependencies": {
