--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "npm": "^3.4.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
+    "react-mdl": "^1.2.0",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
     "redis": "^2.4.2",
