--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "body-parser": "^1.14.1",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
-    "history": "^1.13.1",
     "install": "^0.3.0",
     "moment": "^2.11.1",
     "npm": "^3.4.1",
@@ -19,11 +18,11 @@
     "react-dom": "^0.14.0",
     "react-mdl": "^1.2.0",
     "react-redux": "^4.0.0",
-    "react-router": "^1.0.0",
+    "react-router": "^2.0.0-rc5",
+    "react-router-redux": "^2.1.0",
     "redis": "^2.4.2",
     "redux": "^3.0.0",
     "redux-logger": "^2.0.2",
-    "redux-simple-router": "0.0.8",
     "redux-thunk": "^0.1.0",
     "resemblejs": "^2.1.0",
     "rxjs": "^5.0.0-beta.0",
