--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.7.0",
     "body-parser": "^1.14.1",
+    "compression": "^1.6.1",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "install": "^0.3.0",
