Very initial cleanup of push notifications

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,21 +2,22 @@
   "extends": "airbnb",
 
   "rules": {
-    /**
-     * Variables
-     */
     "no-undef": 2,                          // http://eslint.org/docs/rules/no-undef
     "no-use-before-define": [2, "nofunc"],  // http://eslint.org/docs/rules/no-use-before-define
 
-    /**
-     * Style
-     */
     "object-curly-spacing": [2, "always"],  // http://eslint.org/docs/rules/object-curly-spacing
     "space-before-function-paren": [2, {    // http://eslint.org/docs/rules/space-before-function-paren
       "anonymous": "always",
       "named": "never"
     }],
+    "no-unused-expressions": [2, {
+      "allowTernary": true
+    }],
+    "no-unused-vars": [2, {
+      "args": "after-used",
+      "argsIgnorePattern": "^_"
+    }],
     "func-names": 0,
-    "no-console": 0
+    "no-console": 0,
   },
 }
