--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "install": "^0.3.0",
+    "lodash": "^4.1.0",
     "moment": "^2.11.1",
+    "morgan": "^1.6.1",
     "npm": "^3.4.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
@@ -27,6 +29,8 @@
     "redux-thunk": "^0.1.0",
     "resemblejs": "^2.1.0",
     "rxjs": "^5.0.0-beta.0",
+    "simple-peer": "^5.11.9",
+    "socket.io": "^1.4.5",
     "uuid": "^2.0.1",
     "web-push": "^1.0.0"
   },
