Update airbnb eslint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
 {
   "extends": "airbnb",
 
+  "ecmaFeatures": {
+    "experimentalObjectRestSpread": true,
+  },
+
   "rules": {
     "no-undef": 2,                          // http://eslint.org/docs/rules/no-undef
     "no-use-before-define": [2, "nofunc"],  // http://eslint.org/docs/rules/no-use-before-define
@@ -8,16 +12,19 @@
     "object-curly-spacing": [2, "always"],  // http://eslint.org/docs/rules/object-curly-spacing
     "space-before-function-paren": [2, {    // http://eslint.org/docs/rules/space-before-function-paren
       "anonymous": "always",
-      "named": "never"
+      "named": "never",
     }],
     "no-unused-expressions": [2, {
-      "allowTernary": true
+      "allowTernary": true,
     }],
     "no-unused-vars": [2, {
       "args": "after-used",
-      "argsIgnorePattern": "^_"
+      "argsIgnorePattern": "^_",
     }],
     "func-names": 0,
     "no-console": 0,
+
+    // JSX
+    "react/jsx-no-bind": 0,                 // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/jsx-no-bind.md
   },
 }
