--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "install": "^0.3.0",
+    "keymirror": "^0.1.1",
     "lodash": "^4.1.0",
     "moment": "^2.11.1",
     "morgan": "^1.6.1",
@@ -40,9 +41,10 @@
     "babel-plugin-transform-runtime": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-2": "^6.3.13",
     "css-loader": "^0.23.0",
     "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^2.1.1",
+    "eslint-config-airbnb": "^4.0.0",
     "eslint-loader": "^1.2.0",
     "eslint-plugin-react": "^3.13.1",
     "expect": "^1.6.0",
