--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "compression": "^1.6.1",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
+    "firebase": "^2.4.0",
     "install": "^0.3.0",
     "keymirror": "^0.1.1",
-    "lodash": "^4.1.0",
+    "lodash": "^4.2.0",
     "moment": "^2.11.1",
     "morgan": "^1.6.1",
     "npm": "^3.4.1",
@@ -25,7 +26,7 @@
     "react-router": "^2.0.0-rc5",
     "react-router-redux": "^2.1.0",
     "redis": "^2.4.2",
-    "redux": "^3.0.0",
+    "redux": "^3.2.1",
     "redux-logger": "^2.0.2",
     "redux-thunk": "^0.1.0",
     "resemblejs": "^2.1.0",
