--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.2.0",
     "moment": "^2.11.1",
     "morgan": "^1.6.1",
+    "node-fetch": "^1.3.3",
     "npm": "^3.4.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
