--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-logger": "^2.0.2",
     "redux-thunk": "^1.0.3",
     "resemblejs": "^2.1.0",
+    "route-matcher": "^0.1.0",
     "rxjs": "^5.0.0-beta.0",
     "simple-peer": "^5.11.9",
     "uuid": "^2.0.1",
