--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.9.1",
-    "body-parser": "^1.14.1",
+    "body-parser": "^1.15.0",
     "compression": "^1.6.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
@@ -22,31 +22,31 @@
     "npm": "^3.4.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
-    "react-mdl": "^1.2.0",
+    "react-mdl": "^1.3.0",
     "react-redux": "^4.0.0",
-    "react-router": "^2.0.0-rc6",
+    "react-router": "^2.0.0",
     "react-router-redux": "^3.0.0",
     "redis": "^2.4.2",
     "redux": "^3.3.1",
-    "redux-logger": "^2.0.2",
+    "redux-logger": "^2.5.2",
     "redux-thunk": "^1.0.3",
     "resemblejs": "^2.1.0",
-    "rxjs": "^5.0.0-beta.0",
-    "simple-peer": "^5.11.9",
+    "rxjs": "^5.0.0-beta.2",
+    "simple-peer": "^5.12.0",
     "uuid": "^2.0.1",
     "web-push": "^1.0.2"
   },
   "devDependencies": {
-    "babel-core": "^6.3.26",
+    "babel-core": "^6.5.2",
     "babel-loader": "^6.2.1",
     "babel-plugin-react-transform": "^2.0.0",
-    "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-plugin-transform-runtime": "^6.5.2",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.23.0",
     "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^5.0.0",
+    "eslint-config-airbnb": "^5.0.1",
     "eslint-loader": "^1.2.0",
     "eslint-plugin-react": "^3.13.1",
     "expect": "^1.6.0",
@@ -55,6 +55,6 @@
     "style-loader": "^0.13.0",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.2.0"
+    "webpack-hot-middleware": "^2.7.1"
   }
 }
