--- a/package.json
+++ b/package.json
@@ -2,28 +2,39 @@
   "name": "watchdog",
   "version": "0.0.0",
   "description": "Watchdog",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/grechut/watchdog/"
+  },
   "scripts": {
     "start": "node app/server.js",
     "lint": "eslint ."
   },
   "dependencies": {
     "axios": "^0.9.1",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
     "body-parser": "^1.15.0",
     "compression": "^1.6.1",
     "dotenv": "^2.0.0",
-    "express": "^4.13.3",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^3.16.1",
+    "expect": "^1.14.0",
+    "express": "^4.13.4",
     "firebase": "^2.4.0",
-    "install": "^0.4.2",
+    "install": "^0.4.4",
     "keymirror": "^0.1.1",
-    "lodash": "^4.2.0",
-    "moment": "^2.11.1",
+    "lodash": "^4.4.0",
+    "moment": "^2.11.2",
     "morgan": "^1.6.1",
     "node-fetch": "^1.3.3",
-    "npm": "^3.4.1",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0",
+    "npm": "^3.7.3",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "react-mdl": "^1.4.0",
-    "react-redux": "^4.0.0",
+    "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
     "react-router-redux": "^3.0.0",
     "redux": "^3.3.1",
@@ -33,7 +44,9 @@
     "rxjs": "^5.0.0-beta.2",
     "simple-peer": "^5.12.0",
     "uuid": "^2.0.1",
-    "web-push": "^1.0.2"
+    "web-push": "^1.0.2",
+    "webpack": "^1.12.13",
+    "webpack-dev-middleware": "^1.5.1"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
