--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "watchdog",
   "version": "0.0.0",
   "description": "Watchdog",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/grechut/watchdog/"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/grechut/watchdog/"
   },
   "scripts": {
     "start": "node app/server.js",
@@ -12,28 +12,28 @@
   },
   "dependencies": {
     "axios": "^0.9.1",
-    "babel-loader": "^6.2.2",
+    "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "body-parser": "^1.15.0",
     "compression": "^1.6.1",
+    "debug": "^2.2.0",
     "dotenv": "^2.0.0",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^3.16.1",
     "expect": "^1.14.0",
     "express": "^4.13.4",
-    "firebase": "^2.4.0",
+    "firebase": "^2.4.1",
     "install": "^0.4.4",
     "keymirror": "^0.1.1",
-    "lodash": "^4.4.0",
+    "lodash": "^4.5.0",
     "moment": "^2.11.2",
-    "morgan": "^1.6.1",
+    "morgan": "^1.7.0",
     "node-fetch": "^1.3.3",
     "npm": "^3.7.3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-mdl": "^1.4.0",
+    "react-mdl": "^1.4.1",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
     "react-router-redux": "^3.0.0",
@@ -42,7 +42,7 @@
     "redux-thunk": "^1.0.3",
     "resemblejs": "^2.1.0",
     "rxjs": "^5.0.0-beta.2",
-    "simple-peer": "^5.12.0",
+    "simple-peer": "^6.0.1",
     "uuid": "^2.0.1",
     "web-push": "^1.0.2",
     "webpack": "^1.12.13",
@@ -57,10 +57,10 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.23.0",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^5.0.1",
-    "eslint-loader": "^1.2.0",
-    "eslint-plugin-react": "^3.13.1",
+    "eslint": "^2.2.0",
+    "eslint-config-airbnb": "^6.0.0",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^4.0.0",
     "expect": "^1.6.0",
     "node-libs-browser": "^1.0.0",
     "react-transform-hmr": "^1.0.2",
