Experimental script to check if all packages are installed

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "start": "node app/server.js",
-    "lint": "eslint ."
+    "lint": "eslint ./app",
+    "shrinkwrap:build": "npm shrinkwrap --dev",
+    "shrinkwrap:check": "echo \"require('./shrinkwrap-check')();\" | node"
   },
   "dependencies": {
     "axios": "^0.9.1",
