--- a/package.json
+++ b/package.json
@@ -14,19 +14,13 @@
   },
   "dependencies": {
     "axios": "^0.9.1",
-    "babel-loader": "^6.2.3",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "body-parser": "^1.15.0",
     "compression": "^1.6.1",
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
-    "eslint-loader": "^1.3.0",
     "expect": "^1.14.0",
     "express": "^4.13.4",
     "firebase": "^2.4.1",
-    "install": "^0.4.4",
+    "install": "^0.5.2",
     "keymirror": "^0.1.1",
     "lodash": "^4.5.0",
     "moment": "^2.11.2",
@@ -44,20 +38,19 @@
     "redux-thunk": "^1.0.3",
     "resemblejs": "^2.1.0",
     "rxjs": "^5.0.0-beta.2",
-    "simple-peer": "^6.0.1",
+    "simple-peer": "^6.0.2",
     "uuid": "^2.0.1",
-    "web-push": "^1.0.2",
-    "webpack": "^1.12.13",
-    "webpack-dev-middleware": "^1.5.1"
+    "web-push": "^1.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
-    "babel-loader": "^6.2.1",
+    "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-transform-runtime": "^6.5.2",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "body-parser": "^1.15.0",
     "css-loader": "^0.23.0",
     "eslint": "^2.2.0",
     "eslint-config-airbnb": "^6.0.0",
@@ -67,8 +60,8 @@
     "node-libs-browser": "^1.0.0",
     "react-transform-hmr": "^1.0.2",
     "style-loader": "^0.13.0",
-    "webpack": "^1.9.11",
-    "webpack-dev-middleware": "^1.2.0",
+    "webpack": "^1.12.13",
+    "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.7.1"
   }
 }
