--- a/package.json
+++ b/package.json
@@ -14,33 +14,37 @@
   },
   "dependencies": {
     "axios": "^0.9.1",
+    "babel-core": "^6.6.4",
+    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-preset-es2015": "^6.6.0",
     "compression": "^1.6.1",
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
     "expect": "^1.14.0",
     "express": "^4.13.4",
     "firebase": "^2.4.1",
-    "install": "^0.5.2",
+    "install": "^0.5.4",
     "keymirror": "^0.1.1",
-    "lodash": "^4.5.0",
+    "lodash": "^4.6.1",
     "moment": "^2.11.2",
     "morgan": "^1.7.0",
     "node-fetch": "^1.3.3",
-    "npm": "^3.7.3",
+    "npm": "^3.8.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-mdl": "^1.4.2",
+    "react-mdl": "^1.4.3",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
     "react-router-redux": "^3.0.0",
     "redux": "^3.3.1",
-    "redux-logger": "^2.5.2",
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^1.0.3",
-    "resemblejs": "^2.1.0",
+    "resemblejs": "^2.2.0",
     "rxjs": "^5.0.0-beta.2",
     "simple-peer": "^6.0.2",
     "uuid": "^2.0.1",
-    "web-push": "^1.0.2"
+    "web-push": "^1.0.2",
+    "webpack-hot-middleware": "^2.9.1"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
