--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   },
   "dependencies": {
     "axios": "^0.9.1",
-    "babel-core": "^6.6.4",
+    "babel-core": "^6.6.5",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-runtime": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "compression": "^1.6.1",
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
+    "eslint": "^2.3.0",
+    "eslint-config-airbnb": "^6.1.0",
+    "eslint-plugin-react": "^4.2.0",
     "expect": "^1.14.0",
     "express": "^4.13.4",
     "firebase": "^2.4.1",
@@ -29,13 +33,14 @@
     "moment": "^2.11.2",
     "morgan": "^1.7.0",
     "node-fetch": "^1.3.3",
-    "npm": "^3.8.0",
+    "npm": "^3.8.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-mdl": "^1.4.3",
+    "react-mdl": "^1.4.4",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
     "react-router-redux": "^3.0.0",
+    "react-transform-hmr": "^1.0.4",
     "redux": "^3.3.1",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^1.0.3",
