--- a/package.json
+++ b/package.json
@@ -8,50 +8,40 @@
   },
   "scripts": {
     "start": "node app/server.js",
+    "debug": "node --debug app/server.js",
     "lint": "eslint ./app",
     "shrinkwrap:build": "npm shrinkwrap --dev",
     "shrinkwrap:check": "echo \"require('./shrinkwrap-check')();\" | node"
   },
   "dependencies": {
-    "babel-core": "^6.6.5",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-runtime": "^6.6.0",
-    "babel-preset-es2015": "^6.6.0",
     "compression": "^1.6.1",
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
-    "eslint": "^2.3.0",
-    "eslint-config-airbnb": "^6.1.0",
-    "eslint-plugin-react": "^4.2.0",
-    "expect": "^1.14.0",
     "express": "^4.13.4",
     "firebase": "^2.4.1",
-    "install": "^0.5.4",
     "keymirror": "^0.1.1",
     "lodash": "^4.6.1",
-    "moment": "^2.11.2",
+    "moment": "^2.12.0",
     "morgan": "^1.7.0",
-    "node-fetch": "^1.3.3",
-    "npm": "^3.8.1",
+    "node-fetch": "^1.4.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-mdl": "^1.4.4",
-    "react-redux": "^4.4.0",
-    "react-router": "^2.0.0",
+    "react-mdl": "^1.5.2",
+    "react-redux": "^4.4.1",
+    "react-router": "^2.0.1",
     "react-router-redux": "^3.0.0",
     "react-transform-hmr": "^1.0.4",
     "redux": "^3.3.1",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^1.0.3",
+    "redux-thunk": "^2.0.1",
     "resemblejs": "^2.2.0",
-    "rxjs": "^5.0.0-beta.2",
+    "rxjs": "^5.0.0-beta.3",
     "simple-peer": "^6.0.2",
     "uuid": "^2.0.1",
-    "web-push": "^1.0.2",
-    "webpack-hot-middleware": "^2.9.1"
+    "web-push": "^2.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.5.2",
+    "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-transform-runtime": "^6.5.2",
@@ -60,16 +50,15 @@
     "babel-preset-stage-0": "^6.5.0",
     "body-parser": "^1.15.0",
     "css-loader": "^0.23.0",
-    "eslint": "^2.2.0",
-    "eslint-config-airbnb": "^6.0.0",
+    "eslint": "^2.4.0",
+    "eslint-config-airbnb": "^6.2.0",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^4.0.0",
-    "expect": "^1.6.0",
+    "eslint-plugin-react": "^4.2.3",
     "node-libs-browser": "^1.0.0",
     "react-transform-hmr": "^1.0.2",
-    "style-loader": "^0.13.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.13",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.7.1"
+    "webpack-dev-middleware": "^1.6.0",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
