--- a/package.json
+++ b/package.json
@@ -14,31 +14,35 @@
     "shrinkwrap:check": "echo \"require('./shrinkwrap-check')();\" | node"
   },
   "dependencies": {
+    "babel-core": "^6.7.7",
+    "babel-plugin-transform-runtime": "^6.7.5",
     "compression": "^1.6.1",
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
+    "eslint": "^2.8.0",
     "express": "^4.13.4",
     "firebase": "^2.4.2",
     "keymirror": "^0.1.1",
-    "lodash": "^4.8.2",
-    "moment": "^2.12.0",
+    "lodash": "^4.11.1",
+    "moment": "^2.13.0",
     "morgan": "^1.7.0",
-    "node-fetch": "^1.5.0",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "react-mdl": "^1.5.2",
-    "react-redux": "^4.4.1",
-    "react-router": "^2.0.1",
+    "node-fetch": "^1.5.1",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-mdl": "^1.5.4",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.3.0",
     "react-router-redux": "^3.0.0",
     "react-transform-hmr": "^1.0.4",
-    "redux": "^3.3.1",
+    "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
     "resemblejs": "^2.2.0",
-    "rxjs": "^5.0.0-beta.5",
+    "rxjs": "^5.0.0-beta.6",
     "simple-peer": "^6.0.3",
-    "uuid": "^2.0.1",
-    "web-push": "^2.0.0"
+    "uuid": "^2.0.2",
+    "web-push": "^2.0.2",
+    "webpack": "^1.13.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.4",
