--- a/package.json
+++ b/package.json
@@ -14,35 +14,37 @@
     "shrinkwrap:check": "echo \"require('./shrinkwrap-check')();\" | node"
   },
   "dependencies": {
-    "babel-core": "^6.7.7",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "compression": "^1.6.1",
+    "babel-core": "^6.9.1",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "body-parser": "^1.15.1",
+    "compression": "^1.6.2",
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
-    "eslint": "^2.8.0",
+    "eslint": "^2.11.1",
     "express": "^4.13.4",
     "firebase": "^2.4.2",
     "keymirror": "^0.1.1",
-    "lodash": "^4.11.1",
+    "lodash": "^4.13.1",
     "moment": "^2.13.0",
     "morgan": "^1.7.0",
-    "node-fetch": "^1.5.1",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
+    "node-fetch": "^1.5.3",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "react-mdl": "^1.5.4",
     "react-redux": "^4.4.5",
-    "react-router": "^2.3.0",
+    "react-router": "^2.4.1",
     "react-router-redux": "^3.0.0",
     "react-transform-hmr": "^1.0.4",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.0.1",
-    "resemblejs": "^2.2.0",
-    "rxjs": "^5.0.0-beta.6",
-    "simple-peer": "^6.0.3",
+    "redux-thunk": "^2.1.0",
+    "resemblejs": "^2.2.1",
+    "rxjs": "^5.0.0-beta.8",
+    "simple-peer": "^6.0.4",
     "uuid": "^2.0.2",
-    "web-push": "^2.0.2",
-    "webpack": "^1.13.0"
+    "web-push": "^2.1.1",
+    "webpack": "^1.13.1"
   },
   "devDependencies": {
     "babel-core": "^6.7.4",
