--- a/package.json
+++ b/package.json
@@ -14,57 +14,50 @@
     "shrinkwrap:check": "echo \"require('./shrinkwrap-check')();\" | node"
   },
   "dependencies": {
-    "babel-core": "^6.9.1",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "body-parser": "^1.15.1",
+    "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
-    "eslint": "^2.11.1",
-    "express": "^4.13.4",
+    "express": "^4.14.0",
     "firebase": "^2.4.2",
     "keymirror": "^0.1.1",
-    "lodash": "^4.13.1",
-    "moment": "^2.13.0",
+    "lodash": "^4.15.0",
+    "moment": "^2.14.1",
     "morgan": "^1.7.0",
-    "node-fetch": "^1.5.3",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-mdl": "^1.5.4",
+    "node-fetch": "^1.6.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-mdl": "^1.7.1",
     "react-redux": "^4.4.5",
-    "react-router": "^2.4.1",
+    "react-router": "^2.7.0",
     "react-router-redux": "^3.0.0",
-    "react-transform-hmr": "^1.0.4",
-    "redux": "^3.5.2",
+    "redux": "^3.6.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "resemblejs": "^2.2.1",
-    "rxjs": "^5.0.0-beta.8",
-    "simple-peer": "^6.0.4",
+    "rxjs": "^5.0.0-beta.11",
+    "simple-peer": "^6.0.7",
     "uuid": "^2.0.2",
-    "web-push": "^2.1.1",
-    "webpack": "^1.13.1"
+    "web-push": "^2.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.7.4",
-    "babel-loader": "^6.2.4",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "babel-plugin-react-transform": "^2.0.0",
-    "babel-plugin-transform-runtime": "^6.5.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "body-parser": "^1.15.0",
     "css-loader": "^0.23.0",
-    "eslint": "^2.7.0",
+    "eslint": "^2.13.1",
     "eslint-config-airbnb": "^6.2.0",
-    "eslint-loader": "^1.3.0",
+    "eslint-loader": "^1.5.0",
     "eslint-plugin-react": "^4.3.0",
     "node-libs-browser": "^1.0.0",
-    "react-transform-hmr": "^1.0.2",
+    "react-transform-hmr": "^1.0.4",
     "style-loader": "^0.13.1",
-    "webpack": "^1.12.13",
+    "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack-hot-middleware": "^2.12.2"
   }
 }
