--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "git",
     "url": "https://github.com/grechut/watchdog/"
   },
+  "license": "MIT",
   "scripts": {
     "start": "node app/server.js",
     "debug": "node --debug app/server.js",
@@ -18,9 +19,9 @@
     "debug": "2.2.0",
     "dotenv": "2.0.0",
     "express": "4.14.0",
-    "firebase": "3.4.1",
+    "firebase": "^3.5.0",
     "keymirror": "0.1.1",
-    "lodash": "4.16.2",
+    "lodash": "^4.16.4",
     "moment": "2.15.1",
     "morgan": "1.7.0",
     "node-fetch": "1.6.3",
@@ -31,13 +32,13 @@
     "react-router": "2.8.1",
     "react-router-redux": "3.0.0",
     "redux": "3.6.0",
-    "redux-logger": "2.6.1",
+    "redux-logger": "^2.7.0",
     "redux-thunk": "2.1.0",
     "resemblejs": "2.2.2",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.0-rc.1",
     "simple-peer": "6.0.7",
     "uuid": "2.0.3",
-    "web-push": "2.2.0"
+    "web-push": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "6.17.0",
@@ -47,18 +48,20 @@
     "babel-preset-es2015": "6.16.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
+    "clean-webpack-plugin": "^0.1.13",
     "css-loader": "0.25.0",
-    "eslint": "3.7.0",
+    "eslint": "^3.8.0",
     "eslint-config-airbnb": "12.0.0",
     "eslint-loader": "1.5.0",
     "eslint-plugin-import": "1.16.0",
-    "eslint-plugin-jsx-a11y": "2.2.2",
-    "eslint-plugin-react": "6.3.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1",
+    "html-webpack-plugin": "^2.22.0",
     "node-libs-browser": "1.0.0",
     "react-transform-hmr": "1.0.4",
     "style-loader": "0.13.1",
     "webpack": "1.13.2",
-    "webpack-dev-middleware": "1.8.3",
-    "webpack-hot-middleware": "2.12.2"
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.0"
   }
 }
