--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "license": "MIT",
   "scripts": {
-    "start": "node app/server.js",
     "debug": "node --debug app/server.js",
-    "lint": "eslint ./app --ext js --ext jsx"
+    "lint": "eslint ./app --ext js --ext jsx",
+    "start": "node app/server.js"
   },
   "dependencies": {
     "body-parser": "1.15.2",
@@ -56,6 +56,7 @@
     "eslint-plugin-import": "1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
     "node-libs-browser": "1.0.0",
     "react-transform-hmr": "1.0.4",
