--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "1.15.2",
     "classnames": "2.2.5",
     "compression": "1.6.2",
+    "connect-history-api-fallback": "^1.3.0",
     "debug": "2.2.0",
     "dotenv": "2.0.0",
     "express": "4.14.0",
