--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "license": "MIT",
   "scripts": {
+    "build": "webpack",
     "debug": "node --debug app/server.js",
     "lint": "eslint ./app --ext js --ext jsx",
-    "start": "node app/server.js"
+    "start": "node app/server.js",
+    "heroku-postbuild": "npm run build"
   },
   "engines": {
     "node": "6.8.1"
