--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "debug": "2.2.0",
     "dotenv": "2.0.0",
     "express": "4.14.0",
+    "fcm-node": "^1.0.15",
     "firebase": "^3.5.0",
     "keymirror": "0.1.1",
     "lodash": "^4.16.4",
@@ -44,8 +45,7 @@
     "resemblejs": "2.2.2",
     "rxjs": "^5.0.0-rc.1",
     "simple-peer": "6.0.7",
-    "uuid": "2.0.3",
-    "web-push": "^3.1.0"
+    "uuid": "2.0.3"
   },
   "devDependencies": {
     "babel-core": "6.17.0",
@@ -64,9 +64,11 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "node-libs-browser": "1.0.0",
     "react-transform-hmr": "1.0.4",
+    "string-replace-loader": "^1.0.5",
     "style-loader": "0.13.1",
     "webpack": "1.13.2",
     "webpack-dev-middleware": "^1.8.4",
