Update gcm_sender_id in manifest.json according to FCM docs
https://firebase.google.com/docs/cloud-messaging/js/client

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -2,5 +2,5 @@
   "name": "Watchdog",
   "short_name": "Watchdog",
   "display": "standalone",
-  "gcm_sender_id": "$process.env.GCM_SENDER_ID"
+  "gcm_sender_id": "103953800507"
 }
