--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "dotenv": "2.0.0",
     "express": "4.14.0",
     "fcm-node": "^1.0.15",
-    "firebase": "^3.5.0",
+    "firebase": "^3.5.3",
     "keymirror": "0.1.1",
-    "lodash": "^4.16.4",
-    "moment": "2.15.1",
+    "lodash": "^4.16.6",
+    "moment": "^2.15.2",
     "morgan": "1.7.0",
     "node-fetch": "1.6.3",
     "react": "15.3.2",
@@ -40,38 +40,38 @@
     "react-router": "2.8.1",
     "react-router-redux": "3.0.0",
     "redux": "3.6.0",
-    "redux-logger": "^2.7.0",
+    "redux-logger": "^2.7.4",
     "redux-thunk": "2.1.0",
     "resemblejs": "2.2.2",
-    "rxjs": "^5.0.0-rc.1",
+    "rxjs": "^5.0.0-rc.2",
     "simple-peer": "6.0.7",
     "uuid": "2.0.3"
   },
   "devDependencies": {
-    "babel-core": "6.17.0",
-    "babel-loader": "6.2.5",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-runtime": "6.15.0",
-    "babel-preset-es2015": "6.16.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
-    "clean-webpack-plugin": "^0.1.13",
+    "clean-webpack-plugin": "^0.1.14",
     "css-loader": "0.25.0",
-    "eslint": "^3.8.0",
-    "eslint-config-airbnb": "12.0.0",
-    "eslint-loader": "1.5.0",
-    "eslint-plugin-import": "1.16.0",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb": "13.0.0",
+    "eslint-loader": "1.6.1",
+    "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.4.1",
+    "eslint-plugin-react": "^6.6.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin": "^2.24.1",
     "node-libs-browser": "1.0.0",
     "react-transform-hmr": "1.0.4",
     "string-replace-loader": "^1.0.5",
     "style-loader": "0.13.1",
-    "webpack": "1.13.2",
+    "webpack": "1.13.3",
     "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.13.0"
+    "webpack-hot-middleware": "^2.13.1"
   }
 }
