--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "debug": "2.2.0",
     "dotenv": "2.0.0",
     "express": "4.14.0",
-    "fcm-node": "^1.0.15",
-    "firebase": "^3.5.3",
+    "fcm-node": "1.0.16",
+    "firebase": "3.6.7",
     "keymirror": "0.1.1",
     "lodash": "^4.16.6",
     "moment": "^2.15.2",
