--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "debug": "node --debug server/server.js",
     "lint": "eslint --cache \"**/*.{js,jsx}\"",
     "start": "node server/server.js",
-    "heroku-postbuild": "npm run build"
+    "test": "yarn run lint",
+    "heroku-postbuild": "yarn run build"
   },
   "engines": {
-    "node": "8.1.4"
+    "node": "8.2.1"
   },
   "dependencies": {
     "body-parser": "1.15.2",
@@ -26,7 +27,7 @@
     "dotenv": "2.0.0",
     "express": "4.14.0",
     "fcm-node": "1.0.16",
-    "firebase": "3.6.7",
+    "firebase": "4.1.3",
     "keymirror": "0.1.1",
     "lodash": "^4.16.6",
     "moment": "^2.15.2",
@@ -49,29 +50,29 @@
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
+    "babel-loader": "^7.1.1",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-runtime": "6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
     "clean-webpack-plugin": "^0.1.14",
-    "css-loader": "0.25.0",
-    "eslint": "^3.9.1",
-    "eslint-config-airbnb": "13.0.0",
-    "eslint-loader": "1.6.1",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.6.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "css-loader": "^0.28.4",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.2",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.6.1",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
     "node-libs-browser": "1.0.0",
     "react-transform-hmr": "1.0.4",
-    "string-replace-loader": "^1.0.5",
-    "style-loader": "0.13.1",
-    "webpack": "1.13.3",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.13.1"
+    "string-replace-loader": "^1.3.0",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.3.0",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-hot-middleware": "^2.18.2"
   }
 }
